DHParser Version 0.9.8
......................


DHParser Version 0.9.7 (1.9.2021)
.................................

- test-suites can now contain test-data for tree-transformation
  stages beyond AST, if their output is serializable as string.
- Support for the language server protocol via: DHParser/lsp.py
- reentry-points for resume and skip can now also be determined
  with an EBNF-parser, and not only regular expressions as before.
- Documentation extended


DHParser Version 0.9.6 (1.7.2021)
.................................

- Documentation extended
- Better support for error-reporting from preprocessors


DHParser Version 0.9.5 (1.6.2021)
.................................

- Python 3.5 compatibility dropped! DHParser now requires at least Python 3.6.
  This allows to use typing.NamedTuples and dataclasses for a clearer
  expression of types.
- batch processing: just use several files or a directory or a
  shell pattern as parameters for the xxxParser.py or xxxServer.py-Skripts
- DHParser.compile.Compiler is now more tolerant w.r.t to compiler-methods
  that manipulate the parent tree (`fallback_compiler`-method rewritten)
- DHParser.syntaxtree: added "skip_subtree"-parameter to Node.select-methods
- DHParser.syntaxtree: more functions for navigating contexts, e.g.
  prev_context, next_context.
- DHParser.syntaxtree: added insert() and remove() methods to Node class
- DHParser.syntaxtree: added a mini API for manipulating attributes
- DHParser.parse: added early horizontal tree-reduction to class CombinedParser
- DHParser.ebnf: added ""@reduction"-directive
- DHParser.preprocess:  added support for chaining of source texts via include


DHParser Version 0.9.4 (6.10.2020)
..................................

- better Language server support (modules server.py and lsp.py - still
  somewhat experimental)
- language servers can now also be connected via streams, not only tcp
- Rudimentary Language Server example (for Visual Studio Code etc.) in 